// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchFilter renders correctly with both filters preselected 1`] = `
<form
  action="/"
  method="get"
>
  <input
    name="p_p_id"
    type="hidden"
    value="com_liferay_osb_customer_downloads_display_web_DownloadsDisplayPortlet"
  />
  <div
    className="search-filters"
  >
    <div
      className="search-filter-container"
    >
      <label
        className="control-label"
        htmlFor="namespaceproduct"
      >
        product:
      </label>
      <select
        className="form-control"
        id="namespaceproduct"
        name="namespaceproduct"
        onChange={[Function]}
        value="product_two"
      >
        <option
          value=""
        >
          select product
        </option>
        <option
          label="Product One"
          value="product_one"
        >
          Product One
        </option>
        <option
          label="Product Two"
          value="product_two"
        >
          Product Two
        </option>
      </select>
    </div>
    <div
      className="search-filter-container"
    >
      <label
        className="control-label"
        htmlFor="namespacefileType"
      >
        file-type:
      </label>
      <select
        className="form-control"
        id="namespacefileType"
        name="namespacefileType"
        onChange={[Function]}
        value="two"
      >
        <option
          value=""
        >
          select file-type
        </option>
        <option
          label="One"
          value="one"
        >
          One
        </option>
        <option
          label="Two"
          value="two"
        >
          Two
        </option>
        <option
          label="Three"
          value="three"
        >
          Three
        </option>
      </select>
    </div>
  </div>
</form>
`;

exports[`SearchFilter renders correctly with no selection 1`] = `
<form
  action="/"
  method="get"
>
  <input
    name="p_p_id"
    type="hidden"
    value="com_liferay_osb_customer_downloads_display_web_DownloadsDisplayPortlet"
  />
  <div
    className="search-filters"
  >
    <div
      className="search-filter-container"
    >
      <label
        className="control-label"
        htmlFor="namespaceproduct"
      >
        product:
      </label>
      <select
        className="form-control"
        id="namespaceproduct"
        name="namespaceproduct"
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          select product
        </option>
        <option
          label="Product One"
          value="product_one"
        >
          Product One
        </option>
        <option
          label="Product Two"
          value="product_two"
        >
          Product Two
        </option>
      </select>
    </div>
    <div
      className="search-filter-container"
    >
      <label
        className="control-label"
        htmlFor="namespacefileType"
      >
        file-type:
      </label>
      <select
        className="form-control"
        id="namespacefileType"
        name="namespacefileType"
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          select file-type
        </option>
      </select>
    </div>
  </div>
</form>
`;
